--- a/app/src/index.html
+++ b/app/src/index.html
@@ -1,54 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Watamoto</title>
 
-<head>
-  <meta charset="utf-8" />
-  <title>Watamoto</title>
+    <meta property="og:site_name" content="Watamoto" />
+    <meta property="og:title" content="Watamoto" />
 
-  <meta property="og:site_name" content="Watamoto">
-  <meta property="og:title" content="Watamoto">
+    <meta name="author" content="David Dal Busco" />
 
-  <meta name="author" content="David Dal Busco">
+    <meta name="description" content="A Trello look alike board for my flat hunting in Zürich." />
+    <meta property="og:description" content="A Trello look alike board for my flat hunting in Zürich." />
 
-  <meta name="description" content="A Trello look alike board for my flat hunting in Zürich.">
-  <meta property="og:description" content="A Trello look alike board for my flat hunting in Zürich.">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://watamoto.com" />
 
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://watamoto.com">
+    <meta property="og:image" content="https://watamoto.com/assets/favicon/android-chrome-512x512.png" />
+    <meta property="og:image:type" content="image/png" />
 
-  <meta property="og:image" content="https://watamoto.com/assets/favicon/android-chrome-512x512.png">
-  <meta property="og:image:type" content="image/png">
+    <link rel="canonical" href="https://watamoto.com" />
 
-  <link rel="canonical" href="https://watamoto.com"/>
+    <base href="/" />
 
-  <base href="/" />
+    <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="msapplication-tap-highlight" content="no" />
 
-  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <meta name="format-detection" content="telephone=no" />
-  <meta name="msapplication-tap-highlight" content="no" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
 
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <!-- add to homescreen for ios -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="Watamoto" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#0079bf" />
 
-  <!-- add to homescreen for ios -->
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-title" content="Watamoto" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="#0079bf" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png" />
+    <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#0079bf" />
+    <link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
+    <meta name="msapplication-TileColor" content="#0079bf" />
+    <meta name="msapplication-config" content="/assets/favicon/browserconfig.xml" />
+    <meta name="theme-color" content="#0079bf" />
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
-  <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#0079bf">
-  <link rel="shortcut icon" href="/assets/favicon/favicon.ico">
-  <meta name="msapplication-TileColor" content="#0079bf">
-  <meta name="msapplication-config" content="/assets/favicon/browserconfig.xml">
-  <meta name="theme-color" content="#0079bf">
+    <link rel="manifest" href="manifest.json" />
+  </head>
 
-  <link rel="manifest" href="manifest.json">
-
-</head>
-
-<body>
-  <app-root></app-root>
-</body>
-
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
