--- a/app/src/index.html
+++ b/app/src/index.html
@@ -26,7 +26,7 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&amp;display=swap" rel="stylesheet" />
 
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -47,5 +47,7 @@
 
   <body>
     <app-root></app-root>
+
+    <noscript>Please enable JavaScript to continue using this application.</noscript>
   </body>
 </html>
