--- a/app/src/index.html
+++ b/app/src/index.html
@@ -13,12 +13,12 @@
     <meta property="og:description" content="A Trello look alike board for my flat hunting in Zürich." />
 
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://watamoto.com" />
+    <meta property="og:url" content="https://watamato.com" />
 
-    <meta property="og:image" content="https://watamoto.com/assets/favicon/android-chrome-512x512.png" />
+    <meta property="og:image" content="https://watamato.com/assets/favicon/android-chrome-512x512.png" />
     <meta property="og:image:type" content="image/png" />
 
-    <link rel="canonical" href="https://watamoto.com" />
+    <link rel="canonical" href="https://watamato.com" />
 
     <base href="/" />
 
